# axolotl_git

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  boots_cfg.yml  boots_cfg_draft.yml  boots_cfg_example.yml  build.rs  cfg_draft.yml  cfg_example.yml  docker-compose.yml  example_config.yml  example_group.yml  example_group_clis.yml  example_projects.yml  otel-collector-config.yml  shell.nix  workflow-config-draft.yml
.github/workflows/: axolotl-git-ci.yml  axolotl-git-crates-io.yml  axolotl-git-gh-release.yml
axl/: Cargo.toml
axl/src/: cli.rs  main.rs
axl_derive/: Cargo.toml
axl_lib/: Cargo.toml
axl_lib/src/: config.rs  constants.rs  fzf.rs  helper.rs  lib.rs
axl_lib/src/multiplexer/: tmux.rs  zellij.rs
boots/: Cargo.toml
boots/src/: main.rs
boots_derive/: Cargo.toml
boots_derive/src/: lib.rs
boots_lib/: Cargo.toml
boots_lib/src/: config.rs
examples/: list_projects.rs  list_tags.rs
examples/files/: config.yml  group_clis.yml  group_global.yml  group_libs.yml  project_config.yml
git_client/src/: lib.rs
src/: cli.rs  config.rs  config_env.rs  constants.rs  error.rs  fingerprint.rs  fzf.rs  helper.rs  lib.rs  main.rs  project.rs  project_manager.rs  subcommand_project.rs  tmux.rs  zoxide.rs
src/boots_config/: config.rs
src/config/: config_env.rs  config_file.rs  constants.rs  mod.rs
src/multiplexer/: mod.rs  tmux.rs  zellij.rs
src/project/: group.rs  mod.rs  project_directory.rs  project_directory_manager.rs  project_file.rs  project_manager.rs  project_type.rs  subcommand.rs
src/tracing/: filter.rs  mod.rs  otel.rs  resource.rs
tests/: cli_failure.rs
