[package]
name = "axolotl_git"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = ["David Pitoniak"]
repository = "https://github.com/pitoniak32/axolotl_git"
description = "Tmux session management CLI"
keywords = ["project", "cli", "git", "repository"]

[lib]
name = "axl_lib"
path = "src/lib.rs"

[[bin]]
name = "axl"
path = "src/main.rs"

[dependencies]
# tracing
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# error handling
anyhow = "1.0.71"
thiserror = "1.0.56"

# cli
clap = { version = "4.3.10", features = ["derive", "env", "color"] }
clap-verbosity-flag = "2.0.1"

# serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
serde_yaml = "0.9.22"

# misc
strum_macros = "0.26.1"
strum = { version = "0.26.1", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
similar = "2.4.0"
rand = "0.8.5"
colored = "2.0.4"
console = "0.15.8"
inquire = "0.7.0"
spinners = "4.1.1"

[dev-dependencies]
rstest = "0.18.2"
rstest_reuse = "0.6.0"
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
predicates = "3.1.0"
insta = "1.34.0"
similar-asserts = "1.5.0"

[build-dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
