[package]
name = "axl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axl_lib = { path = "../axl_lib" }
clap = { version = "4.3.10", features = ["derive", "env", "color"] }
clap-verbosity-flag = "2.0.1"
anyhow = "1.0.71"
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
serde_yaml = "0.9.22"
bat = "0.23.0"
