[package]
name = "axl_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive", "env"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"

colored = "2.0.4"
git_lib = { path = "../../git_repo/git_lib" }
axl_derive = { path = "../axl_derive" }
derive_more = "0.99.17"
serde_yaml = "0.9.22"
log = "0.4.19"
thiserror = "1.0.56"
toml = "0.8.8"
serde_json = "1.0.111"

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
unwrap_used = "deny"
