[package]
name = "boots_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive", "env"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
