[package]
name = "boots_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive", "env"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"

boots_derive = { path = "../boots_derive" }
derive_more = "0.99.17"
serde_yaml = "0.9.22"
log = "0.4.19"
pretty_assertions = "1.3.0"
